route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: redis-demo-ui
  labels:
    app: redis-enterprise
    redis.io/cluster: rec
spec:
  host: redis-demo-ui-redis.apps.cluster-lba7d2.lba7d2.sandbox734.opentlc.com
  to:
    kind: Service
    name: rec-ui
    weight: 100
  port:
    targetPort: ui
  tls:
    termination: passthrough
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: redis-demo-rest-api
  labels:
    app: redis-enterprise
    redis.io/cluster: rec
spec:
  host: redis-demo-rest-api-redis.apps.cluster-lba7d2.lba7d2.sandbox734.opentlc.com
  to:
    kind: Service
    name: rec
    weight: 100
  port:
    targetPort: api
  tls:
    termination: passthrough
  wildcardPolicy: None
